--- a/src/app/componente-inicio/componente-inicio.component.html
+++ b/src/app/componente-inicio/componente-inicio.component.html
@@ -1,5 +1,6 @@
-
-<div class="row mt-2" style="margin: 3%;">
+<div style="background-color: rgb(19, 12, 80) !important;">
+    
+<div class="row mt-2" style="margin: 3%;"  >
 
     <h1 style="margin-top: 50px; margin-bottom: 25px; text-align: center; color: white; font-size: 5vw;">Jujuy Andino Club de Montaña</h1>
 
@@ -31,7 +32,7 @@
 
    
     <div class="row" style="margin-top: 2%;">
-        <!-- Carrusel -->
+        
         <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6 col-md-12 col-12 m-auto" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -67,3 +68,5 @@
 
 
 
+
+</div>
