--- a/src/app/componente-contactos/componente-contactos.component.html
+++ b/src/app/componente-contactos/componente-contactos.component.html
@@ -1,5 +1,5 @@
-<div >
-    <div style="background-image: url('assets/img/background2.JPG'); background-size: cover;  background-size: 100% auto;">
+
+    <div style="background-image: url('assets/img/background2.JPG'); background-size:auto;  background-size:  100% auto; height: 100%;">
         <br><br>
         <div style="justify-content: space-around;">
     
@@ -29,14 +29,20 @@
     
     
         </div>
-        <br><br><br>
+        <br><br>
+
+        <div style="text-align: center;">
+    
+            <button class="btn btn-primary" (click)="volverInicio()">Ir al Inicio</button>
+        
+        </div>
+
+        <br><br>
     </div>
+
+   
     
-    <br>
+
     
-    <div style="text-align: center;">
-    
-        <button class="btn btn-primary" (click)="volverInicio()">Ir al Inicio</button>
-    
-    </div>
-</div>
+
+
