--- a/src/app/componente-socios/componente-socios.component.html
+++ b/src/app/componente-socios/componente-socios.component.html
@@ -1,4 +1,4 @@
- 
+<div style="background-color: rgb(19, 12, 80) !important; height: 100%;">
   <br>
   <h1 style="text-align: center; color: aliceblue; font-size: 2vw;"> Socios Jujuy Andino</h1>  
   <br>
@@ -14,13 +14,9 @@
 
       <br><br><br>
 
-      <div class="col">  
-        <div>
+      <div >
 
-          <table mat-table [dataSource]= "dataSource |  filter:filterPost" class="mat-elevation-z8" matSort matTableExporter #exporter="matTableExporter" style="font-weight: bold;">
-          
-            <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->           
+          <mat-table [dataSource]= "dataSource |  filter:filterPost" class="mat-elevation-z8" matSort matTableExporter #exporter="matTableExporter" style="font-weight: bold;">          
               
             <!-- Check Column -->
             <ng-container matColumnDef="check">
@@ -30,75 +26,75 @@
 
             <!-- Position Column -->
             <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
+              <th mat-header-cell *matHeaderCellDef>#</th>
               <td mat-cell *matCellDef="let socio"> {{socios.indexOf(socio)+1}} </td>
             </ng-container>
           
             <!-- Apellido -->
             <ng-container matColumnDef="apellido">
-              <th mat-header-cell *matHeaderCellDef> Apellido </th>
+              <th mat-header-cell *matHeaderCellDef>Apellido</th>
               <td mat-cell *matCellDef="let socio"> {{socio.apellido}} </td>
             </ng-container>
           
             <!-- Nombres -->
             <ng-container matColumnDef="nombres">
-              <th mat-header-cell *matHeaderCellDef> Nombres </th>
+              <th mat-header-cell *matHeaderCellDef>Nombres</th>
               <td mat-cell *matCellDef="let socio"> {{socio.nombre}} </td>
             </ng-container>
           
             <!-- DNI -->
             <ng-container matColumnDef="dni">
-              <th mat-header-cell *matHeaderCellDef> DNI </th>
+              <th mat-header-cell *matHeaderCellDef>DNI</th>
               <td mat-cell *matCellDef="let socio"> {{socio.dni}} </td>
             </ng-container>
 
             <!-- Fecha de Nac -->
             <ng-container matColumnDef="fechaNac">
-              <th mat-header-cell *matHeaderCellDef> Fecha de Nac </th>
+              <th mat-header-cell *matHeaderCellDef>Fecha de Nac</th>
               <td mat-cell *matCellDef="let socio"> {{socio.fechaNac | date: 'dd/MM/yyyy'}} </td>
             </ng-container>
 
             <!-- Edad -->
             <ng-container matColumnDef="edad">
-              <th mat-header-cell *matHeaderCellDef> Edad </th>
+              <th mat-header-cell *matHeaderCellDef>Edad</th>
               <td mat-cell *matCellDef="let socio"> {{calcularEdad(socio.fechaNac)}} </td>
             </ng-container>
 
             <!-- Domicilio -->
             <ng-container matColumnDef="domicilio">
-              <th mat-header-cell *matHeaderCellDef> Domicilio </th>
+              <th mat-header-cell *matHeaderCellDef>Domicilio</th>
               <td mat-cell *matCellDef="let socio"> {{socio.domicilio}} </td>
             </ng-container>
 
             <!-- Telefono -->
             <ng-container matColumnDef="telefono">
-              <th mat-header-cell *matHeaderCellDef> Telefono </th>
+              <th mat-header-cell *matHeaderCellDef>Telefono</th>
               <td mat-cell *matCellDef="let socio"> {{socio.telefono}} </td>
             </ng-container>
 
             <!-- Fecha Igreso -->
             <ng-container matColumnDef="fechaIns">
-              <th mat-header-cell *matHeaderCellDef> Fecha Ingreso </th>
+              <th mat-header-cell *matHeaderCellDef>Ingreso</th>
               <td mat-cell *matCellDef="let socio"> {{socio.fechaIns | date: 'dd/MM/yyyy'}} </td>
             </ng-container>
 
             <!-- Cargo -->
             <ng-container matColumnDef="cargo">
-              <th mat-header-cell *matHeaderCellDef > Cargo/Comision </th>
+              <th mat-header-cell *matHeaderCellDef >Cargo/Comision</th>
               <td mat-cell *matCellDef="let socio"> {{socio.cargo}} </td>
             </ng-container>
 
             <!-- Cuota -->
             <ng-container matColumnDef="cuota">
-              <th mat-header-cell *matHeaderCellDef> Cuota </th>
-              <td mat-cell *matCellDef="let socio" [ngClass]="{deuda: parseFecha(socio.cuota[0].fecha)<parseFecha(this.fechaComparacion)}"> 
+              <th mat-header-cell *matHeaderCellDef>Cuota</th>
+              <td mat-cell *matCellDef="let socio" [ngClass]="parseFecha(socio.cuota[0].fecha)<parseFecha(this.fechaComparacion) ? 'deuda' : 'estadoOk' "> 
               {{socio.cuota[0].fecha | date: 'dd/MM/yyyy'}} </td>
             </ng-container>
 
             <!-- Estudios -->
             <ng-container matColumnDef="estudios">
-              <th mat-header-cell *matHeaderCellDef> Estudios </th>
-              <td mat-cell *matCellDef="let socio" style="text-align: center;" [ngClass]="{deuda: !socio.estudios}">{{estudios(socio.estudios)}}</td>
+              <th mat-header-cell *matHeaderCellDef>Estudios</th>
+              <td mat-cell *matCellDef="let socio" style="text-align: center;" [ngClass]="!socio.estudios ? 'deuda' : 'estadoOk'">{{estudios(socio.estudios)}}</td>
             </ng-container>
 
             <!-- Editar -->
@@ -111,56 +107,11 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
                       
 
-          </table>
+          </mat-table>
 
           <button class="btn violet mt-2" mat-raised-button color="primary" (click)="exporter.exportTable('xlsx', {fileName:'Socios'})" style="background-color: aqua;">Descargar Excel</button>
 
-          <!-- <br><br><br>          
-
-          <table id="tabla" class="table" >
-            <thead >              
-              <tr>
-                <th class="text-center"><input type="checkbox"></th>
-                <th scope="col">#</th>
-                <th scope="col">Apellido</th>
-                <th scope="col">Nombres</th>
-                <th scope="col">DNI</th>
-                <th scope="col">Fecha de Nac</th>
-                <th scope="col">Edad</th>
-                <th scope="col">Domicilio</th>
-                <th scope="col">Telefono</th>            
-                <th scope="col">Fecha de Ingreso</th>
-                <th scope="col">Cargo/Comision</th>
-                <th scope="col">Cuota</th>
-                <th scope="col">Editar</th>             
-  
-              </tr>
-            </thead>
-  
-            <tbody *ngFor="let socio of socios | filter:filterPost; let i=index" >
-              <tr>
-                <td class="text-center"><input type="checkbox"></td>
-                <td scope="row">{{i+1}}</td>
-                <td>{{socio.apellido}}</td>
-                <td>{{socio.nombre}}</td>
-                <td>{{socio.dni}}</td>
-                <td>{{socio.fechaNac | date: 'dd/MM/yyyy'}}</td>
-                <td>{{calcularEdad(socio.fechaNac)}}</td>
-                <td>{{socio.domicilio}}</td>
-                <td>{{socio.telefono}}</td>
-                <td>{{socio.fechaIns | date: 'dd/MM/yyyy'}}</td>
-                <td>{{socio.cargo}}</td>
-                <td>{{socio.cuota[this.socio.cuota.length-1].fecha | date: 'dd/MM/yyyy'}}</td>
-                <td><a [routerLink]="['/actualizar', i]">Editar</a></td>
-                
-              </tr>
-      
-            </tbody>
-          </table>        -->       
           
-  
-        </div>
-  
       </div>
   
     </div>
@@ -170,9 +121,8 @@
   <br><br>
 
   <div style="text-align: center;">
-
     <button class="btn btn-primary" (click)="volverInicio()">Ir al Inicio</button>
-
   </div>
   
+</div> 
 
