--- a/src/app/componente-actualizar/componente-actualizar.component.html
+++ b/src/app/componente-actualizar/componente-actualizar.component.html
@@ -1,5 +1,7 @@
-<div>
+<div style="background-color: rgb(19, 12, 80) !important; height: 100%;">
+  <br><br>
   <div class="row" style="margin: 2%;">
+
     <div class="col-6 centrarDiv">
       <h1 style="color: white;">Modificar/Eliminar Socio</h1>
     </div>
