--- a/src/app/componente-agregar/componente-agregar.component.html
+++ b/src/app/componente-agregar/componente-agregar.component.html
@@ -1,5 +1,7 @@
 
-<h2 style="color: white; text-align: center; margin: 20px;">Agregar Socio</h2>
+<div style="background-color: rgb(19, 12, 80) !important; height: 100%;">
+  <br><br>
+  <h2 style="color: white; text-align: center; margin: 20px;">Agregar Socio</h2>
 <div class="container mt-2">
   <div class="row">
     <div class="col">
@@ -77,4 +79,5 @@
   </div>
   
 
+</div>
 </div>
