--- a/src/app/componente-actualizar/componente-actualizar.component.html
+++ b/src/app/componente-actualizar/componente-actualizar.component.html
@@ -1,120 +1,137 @@
-<div style="background-color: rgb(19, 12, 80) !important; height: 100%;">
-  <br><br>
-  <div class="row" style="margin: 2%;">
+<html>
+  <body class="fondoColor">
 
-    <div class="col-6 centrarDiv">
-      <h1 style="color: white;">Modificar/Eliminar Socio</h1>
-    </div>
-
-    <div class="col-6" style="display: flex; justify-content: right;" >
-      <button class="btn btn-primary" (click)="cancelar()">Volver</button>
-    </div>    
+    <div>
+      <br><br>
+      <div class="row" style="margin: 2%;">
     
-  </div>
-  <form class="form-group row" style="margin: 30px;">
-  
-    <div class="form-group col-md-2" style="margin: 5px;">
-      <label for="apellido" class="labelText">Apellido:</label>
-      <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control" [(ngModel)]="cuadroApellido">
-    </div>
-      
-    <div class="form-group col-md-2" style="margin: 5px;">
-      <label for="apellido" class="labelText">Nombres:</label>
-      <input type="text" name="nombre" id="nombre" placeholder="Nombres" class="form-control" [(ngModel)]="cuadroNombre">
-    </div>
-      
-    <div class="form-group col-md-2" style="margin: 5px;">
-      <label for="apellido" class="labelText">DNI:</label>
-      <input type="text" name="dni" id="dni" placeholder="DNI" class="form-control" [(ngModel)]="cuadroDni">
-    </div>
-      
-    <div class="form-group col-md-2" style="margin: 5px;">
-      <label for="apellido"  class="labelText">Fecha de Nacimiento:</label>
-      <input type="date" name="fechaNac" id="fechaNac" placeholder="Fecha de Nac" class="form-control" [(ngModel)]="cuadroFechaNac">
-    </div>
-      
-    <div class="form-group col-md-2"style="margin: 5px;">
-      <label for="apellido" class="labelText">Telefono:</label>
-      <input type="text" name="telefono" id="telefono" placeholder="Telefono" class="form-control" [(ngModel)]="cuadroTelefono">
-    </div>
-      
-    <div class="form-group col-md-3" style="margin: 5px;">
-      <label for="apellido" class="labelText">Domicilio:</label>
-      <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio" class="form-control" [(ngModel)]="cuadroDomicilio">
-    </div>
-      
-    <div class="form-group col-md-2" style="margin: 5px;">
-      <label for="apellido" class="labelText">Fecha de Ingreso:</label>
-      <input type="date" name="fechaIns" id="fechaIns" placeholder="Fecha de Inscripcion" class="form-control" [(ngModel)]="cuadroFechaIns">
-    </div>
-        
-    <div class="form-group col-md-2" style="margin: 5px;">
-      <label for="apellido" class="labelText">Cargo/Comision:</label>
-      <input type="text" name="cargo" id="cargo" placeholder="Cargo/Comision" class="form-control" [(ngModel)]="cuadroCargo">
-    </div>  
+        <div class="col-6 centrarDiv">
+          <h1 style="color: white; font-size: 2vw;">Modificar/Eliminar Socio</h1>
+        </div>
     
-    <div class="form-group col" style="margin: 5px; display:flex; align-items: center; padding-top: 20px;">
-      <label for="fechapago" style="color: white; font-size: large;" >{{anoEstudio}}</label>
-      <input type="checkbox" name="estudios" id="estudios" placeholder="" style="margin-left: 10px; width: 20px; height: 20px;" [(ngModel)]="cuadroEstudios">
-    </div> 
-    
-  </form>
-
-  <div style="display:flex; justify-content: right; margin: 30px;">
-    <button type="submit" class="btn btn-success" style="margin-right: 5px;" (click)="actualizarSocio()" >Guardar Cambios</button>
-    <button type="submit" class="btn btn-primary" style="background-color: red;" (click)="eliminarSocio()">Eliminar Socio</button>
-  </div>
-
-  <div style="margin-left: 10%;">
-    <h2 style="color: white; margin-left: 3%;">Historial de Pagos</h2>
-
-    <form class="form-group row">
-      
-      <div class="form-group col-md-2" style="margin: 5px;">
-        <label for="cuota" class="labelText">Monto:</label>
-        <input type="number" name="cuota" id="cuota"  placeholder="0" class="form-control" [(ngModel)]="cuadroCuotaA">
+        <div class="col-6" style="display: flex; justify-content: right;" >
+          <button class="btn btn-primary" (click)="cancelar()">Volver</button>
+        </div>    
         
       </div>
-
-      <div class="form-group col-md-2" style="margin: 5px;">
-        <label for="fechapago" class="labelText">Fecha de Pago:</label>
-        <input type="date" name="fechapago" id="fechapago"  placeholder="0" class="form-control" [(ngModel)]="cuadroFechaPagoA">
-
-      </div>
-
-      <div class="form-group col-md-2 " style="display: flex; align-items: end;">
-        <button type="submit" class="btn btn-success" style="height: 50%; margin-bottom: 6px;" (click)="agregarPago()">Agregar Pago</button>
-      </div>
-
-    </form>
-    
-    <table class="table" style="width: 50%;">
-      <thead>         
-        <br> <br>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Fecha</th>
-          <th scope="col">Monto</th> 
-          <th scope="col">Eliminar</th>         
-        
-        </tr>
-      </thead>
+      <form class="form-group row" style="margin: 30px;">
       
-      <tbody *ngFor="let pago of socios[indice].cuota; let i=index">
-        <tr>
-          <th scope="row">{{i+1}}</th>
-          <td>{{pago.fecha | date: 'dd/MM/yyyy'}}</td>
-          <td>{{'$ '+ pago.monto}}</td>
-          <td style="align-items: center;"><button class="btn btn-primary" style="background-color: red;" (click)="eliminarPago(i)">Eliminar</button></td>
-          <!-- <a [routerLink]="[eliminarPago(i)]" style="color: red;">Eliminar Pago</a> -->
-        </tr>
-      </tbody>
-    </table>
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido" class="labelText">Apellido:</label>
+          <input type="text" name="apellido" id="apellido" placeholder="Apellido" class="form-control" [(ngModel)]="cuadroApellido">
+        </div>
+          
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido" class="labelText">Nombres:</label>
+          <input type="text" name="nombre" id="nombre" placeholder="Nombres" class="form-control" [(ngModel)]="cuadroNombre">
+        </div>
+          
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido" class="labelText">DNI:</label>
+          <input type="text" name="dni" id="dni" placeholder="DNI" class="form-control" [(ngModel)]="cuadroDni">
+        </div>
+          
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido"  class="labelText">Fecha de Nacimiento:</label>
+          <input type="date" name="fechaNac" id="fechaNac" placeholder="Fecha de Nac" class="form-control" [(ngModel)]="cuadroFechaNac">
+        </div>
+          
+        <div class="form-group col-md-2"style="margin: 5px;">
+          <label for="apellido" class="labelText">Telefono:</label>
+          <input type="text" name="telefono" id="telefono" placeholder="Telefono" class="form-control" [(ngModel)]="cuadroTelefono">
+        </div>
+          
+        <div class="form-group col-md-3" style="margin: 5px;">
+          <label for="apellido" class="labelText">Domicilio:</label>
+          <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio" class="form-control" [(ngModel)]="cuadroDomicilio">
+        </div>
+          
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido" class="labelText">Fecha de Ingreso:</label>
+          <input type="date" name="fechaIns" id="fechaIns" placeholder="Fecha de Inscripcion" class="form-control" [(ngModel)]="cuadroFechaIns">
+        </div>
+            
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido" class="labelText">Email:</label>
+          <input type="email" name="email" id="email" placeholder="Email" class="form-control" [(ngModel)]="cuadroEmail">
+        </div>  
+        
+        <div class="form-group col-md-2" style="margin: 5px;">
+          <label for="apellido" class="labelText">Fecha de Estudios:</label>
+          <input type="date" name="fechaEstudios" id="fechaEstudios" placeholder="Fecha de Estudios" class="form-control" [(ngModel)]="cuadroEstudios">
+        </div>
+        
+      </form>
+    
+      <div style="display:flex; justify-content: right; margin: 30px;">
+        <button type="submit" class="btn btn-success" style="margin-right: 5px;" (click)="actualizarSocio()" >Guardar Cambios</button>
+        <button type="submit" class="btn btn-primary" style="background-color: red;" (click)="eliminarSocio()">Eliminar Socio</button>
+      </div>
+    
+      <div style="margin-left: 10%;">
+        <h2 style="color: white; font-size: 2vw; margin-left: 3%;">Historial de Pagos</h2>
+    
+        <form class="form-group row">
+          
+          <div class="form-group col-md-2" style="margin: 5px;">
+            <label for="cuota" class="labelText">Monto:</label>
+            <input type="number" name="cuota" id="cuota"  placeholder="0" class="form-control" [(ngModel)]="cuadroCuotaA">
+            
+          </div>
+    
+          <div class="form-group col-md-2" style="margin: 5px;">
+            <label for="fechapago" class="labelText">Fecha de Pago:</label>
+            <input type="date" name="fechapago" id="fechapago"  placeholder="0" class="form-control" [(ngModel)]="cuadroFechaPagoA">
+    
+          </div>
+    
+          <div class="form-group col-md-2" style="margin: 5px;">
+            <label for="fechapago" class="labelText">Recibo:</label>
+            <input type="text" name="fechapago" id="fechapago"  placeholder="N° de Recibo" class="form-control" [(ngModel)]="cuadroReciboA">
+    
+          </div>
+    
+          <div class="form-group col-md-2 " style="display: flex; align-items: end;">
+            <button type="submit" class="btn btn-success" style="height: 50%; margin-bottom: 6px;" (click)="agregarPago()">Agregar Pago</button>
+          </div>
+    
+        </form>
+        
+        <table class="table" style="width: 50%;">
+          <thead>         
+            <br> <br>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Fecha</th>
+              <th scope="col">Monto</th> 
+              <th scope="col">Recibo</th> 
+              <th scope="col">Eliminar</th>         
+            
+            </tr>
+          </thead>
+          
+          <tbody *ngFor="let pago of socios[indice].cuota; let i=index">
+            <tr>
+              <th scope="row">{{i+1}}</th>
+              <td>{{pago.fecha | date: 'dd/MM/yyyy'}}</td>
+              <td>{{'$ '+ pago.monto}}</td>
+              <td>{{ pago.recibo}}</td>
+              <td style="align-items: center;"><button class="btn btn-primary" style="background-color: red;" (click)="eliminarPago(i)">Eliminar</button></td>
+              <!-- <a [routerLink]="[eliminarPago(i)]" style="color: red;">Eliminar Pago</a> -->
+            </tr>
+          </tbody>
+        </table>
+    
+      </div>
+    
+      <br><br><br>
+    </div>
+      
+    
+    
+    
 
-  </div>
-
-  <br><br><br>
-</div>
-  
+  </body>
 
 
+</html>
