--- a/src/app/componente-inicio/componente-inicio.component.html
+++ b/src/app/componente-inicio/componente-inicio.component.html
@@ -1,72 +1,130 @@
-<div style="background-color: rgb(19, 12, 80) !important;">
-    
-<div class="row mt-2" style="margin: 3%;"  >
 
-    <h1 style="margin-top: 50px; margin-bottom: 25px; text-align: center; color: white; font-size: 5vw;">Jujuy Andino Club de Montaña</h1>
-
-    <div class="mt-3 " style="text-align: center;">
-
-        <img src="assets/img/header1.jpg" alt="">
-
-    </div>
-
-    <div style="margin-top: 2%;">
-        <h2 style="color: white; text-align: center;">8VO. ANIVERSARIO DE JUJUY ANDINO CLUB DE MONTAÑA</h2>
-
-        <p class="texto">
+<html>
+    <body class="claseBody" >
+  
         
-            El tiempo pasa muy rápido. Sin darnos cuenta, entre montañas, bosques, ríos, valles, senderos, piedras, barro..., entre subidas y bajadas, entre risas y amistad... ya han pasado 8 años de existencia como Club de Montaña.
-            <br>🔸8 años desde un 6 de mayo de 2014, cuando un grupo de locos, enamorados de las montañas y de las maravillas de nuestra provincia, se juntaron con el sueño de tener un lugar para compartir la pasión por las montañas, un lugar de amigos montañistas... y así fundaron Jujuy Andino Club de Montaña.
-            <br>🔸8 años de mucho trabajo, esfuerzo, dedicación, planificación, organización, tiempo, proyectos, para que el Club sea lo que es hoy.
-            <br>🔸8 años promocionando y fomentando la práctica del montañismo en todas sus formas y modalidades. Formándonos e intentando siempre aportar nuestro granito de arena para que las montañas sean más seguras.
-            <br>🔸8 años en los que hemos recorrimos juntos rutas y senderos, en los que conocimos a amantes de la montaña y la naturaleza, con los que tuvimos la suerte de compartir un pedacito del camino de nuestras vidas.
-            <br>🔸8 años descubriendo nuestro patrimonio natural y dándolo a conocer desde el respeto a un entorno cada vez más sensible.
-            <br>🔸8 años capacitando, brindando información y las herramientas básicas y necesarias para un desenvolvimiento autónomo de forma responsable en la montaña, a través de cursos, talleres y charlas.
-            <br>🔸8 años de amistad y compañerismo, compartiendo cumbres, travesías, campamentos, circuitos, expediciones.
-            <br>🔸8 años creciendo junto a vos.
-            <br><br>Muchas gracias a los Socios, a los amigos, a los colaboradores, a los cursantes del CIM, a los Clubes de Montaña con quienes compartimos muchas actividades y a todos aquellos que no siendo socios de alguna u otra forma apoyaron y confiaron en nuestro Club.
-            
-        </p>
-            
-    </div>
+        <div>
+      
+            <div class="row" style="height: 5%;">
+      
+                <div class="centrado" style="margin-top: 10px;">
+                    <ul class="contenedor centrar" style="justify-content: right; margin-right: 30px;">
+                      <li> <a href= "https://www.facebook.com/groups/jujuyandinoclub"  target="_blank"><img class="imagenEnlace" src="assets/img/facebook.png" alt="Facebook"></a></li>
+                      <li> <a href= "https://www.instagram.com/jujuyandinoclub/" target="_blank"><img class="imagenEnlace" src="assets/img/instagram.png" alt="instagram"></a></li>
+                      <li> <a href="mailto: jujuyandino.cdm@gmail.com" target="_blank"><img class="imagenEnlace" src="assets/img/gmail.png" alt="Gmail"></a></li>
+                      <li> <a href="" target="_blank"><img class="imagenEnlace" src="assets/img/whatsapp.png" alt="Whatsapp"></a></li>
+                      <!-- https://wa.me/+5493884776677 -->
+                    </ul>
 
-   
-    <div class="row" style="margin-top: 2%;">
-        
-        <div id="carouselExampleSlidesOnly " class="carousel slide col-lg-6 col-md-12 col-12 m-auto" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/img/cim01.jpg" class="d-block w-100 w100" alt="CIM 2023 01">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/cim02.jpg" class="d-block w-100" alt="CIM 2023 02">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/cim03.jpg" class="d-block w-100" alt="CIM 2023 03">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/cim04.jpg" class="d-block w-100" alt="CIM 2023 04">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/cim05.jpg" class="d-block w-100" alt="CIM 2023 05">
-                </div>
-                </div>
+                </div>   
+                
+      
             </div>
-        
-        <div class="col-lg-6 col-md-12 col-12">
-            <h2 style="color: white; text-align: center;">CIM 2023</h2>
-            <p class="texto"> 
+            
+            <div class="row" style="height: 20%; margin-top: 20px; margin-left: 10px;"> 
+      
+                <div class="col-6">
+                    <div class="divh1" style="height: 60%;" >
+                        <h1 class="texto-borde" style="font-size: 8vw; ">Jujuy Andino</h1>
+                    </div> 
                     
-                    <br> <br> El viernes 4 de agosto realizamos el Acto de Colación con la entrega de los certificados del Curso de Iniciación al Montañismo 2023.Se llevó a cabo en el salón del Diario El Tribuno de Jujuy, ubicado en Belgrano 246, a las 21 hs.
-                    <br>Una nueva Edición del Curso llegó a su fin. Fueron 3 meses intensos de clases teóricas y salidas prácticas. Siempre apostando a la mejor formación, con disertantes profesionales y especialistas en cada módulo dictado, con nuevas propuestas, con nuevos cursantes, nuevos cerros. Siempre avanzando y mejorando cada año para brindar un Curso de calidad, con información actualizada y ofreciendo las herramientas básicas y elementales para un desempeño seguro y responsable, inculcando valores como la solidaridad, el compañerismo, la amistad, el respeto el amor a la naturaleza.
-            </p>
-        </div>
-    </div>
-</div>
+                    <div class="divh1" style="height: 40%; margin-top: 50px;" >
+                        <h1 class="texto-borde" style="font-size: 4vw; ">Club de Montaña</h1>
+                    </div>
+      
+                </div>
+      
+                <div class="col-6">
+                    
+                    <p class="visorImagenes" style="font-size: 1.0vw; font-weight:bold;" >Nuestro objetivo es la promoción y desarrollo del montañismo en la provincia de Jujuy.
+                        Nuestro Club es abierto a todos aquellos que deseen iniciarse en el Montañismo y realizar esta actividad de forma segura y responsable.
+                        Podes hacerte socio/a y participar de todas nuestras actividades. Para ello, te esperamos en nuestra sede, ubicada en Lamadrid 373, oficina 3 (1er piso) de la ciudad de San Salvador de Jujuy. Todos los dias, 
+                        de 19 a 20:30.
+                    </p>
+
+                </div>               
+                
+                
+            </div>
+      
+            <div class="row" style="margin-top: 100px; margin-left: 10px;" >
+
+                <div class="col-5"  >
+
+                    <div>
+                        <h1 style="font-weight: bold; color: white;" >Nuestras Actividades</h1>
+                    </div>
+                    
+                    <div >
+                        <div id="carouselExampleControls2" class="carousel slide borde" data-bs-ride="carousel">
+                            <div class="carousel-inner borde">
+                                <div class="carousel-item active">
+                                    <img src="assets/img/carrusel06.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item active">
+                                    <img src="assets/img/cim01.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel07.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/cim02.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel08.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel09.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel10.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/cim03.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel11.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel12.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/cim04.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel13.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/carrusel14.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/img/cim05.jpg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"     data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>         
+                       
+                </div>
+
+                <div class="col-3">
+
+                </div>
+      
+                <div class="col-4" style="display: flex;justify-content: center;" >
+                    <img class="imagenDiv" src="assets/img/bono1.jpg">      
+                </div>                 
+      
+            </div>      
+        </div>  
+        
     
-
-
-
-
-
-</div>
+    </body>
+</html>
