--- a/src/app/componente-socios/componente-socios.component.html
+++ b/src/app/componente-socios/componente-socios.component.html
@@ -1,128 +1,143 @@
-<div style="background-color: rgb(19, 12, 80) !important; height: 100%;">
-  <br>
-  <h1 style="text-align: center; color: aliceblue; font-size: 2vw;"> Socios Jujuy Andino</h1>  
-  <br>
+<html >
+  <body class="fondoColor">
+
+    <div>
+      <br>
+      <h1 style="text-align: center; color: aliceblue; font-size: 2vw;"> Socios Jujuy Andino</h1>  
+      <br>
+      
+      
+      <div class="container" style="margin-left: 10px;">
+        <div class="row">
+          <div>
+            <label for="buscar" style="color: white; font-size: medium;">Buscar: </label>
+            <input type="search" class="input" name="buscarApellido" id="buscador" placeholder=" Apelliido" style="margin-left: 2%; border-radius: 10px; height: 60%; padding: 10px;" [(ngModel)]="filterPost">
+            <button type="submit" class="btn btn-success" style="position: absolute;right: 10%;" [routerLink]="['/agregar']">Agregar Socio</button>
+          </div>                
   
+          <br><br><br>
   
-  <div class="container" style="margin-left: 10px;">
-    <div class="row">
-      <div>
-        <label for="buscar" style="color: white; font-size: medium;">Buscar: </label>
-        <input type="search" class="input" name="buscarApellido" id="buscador" placeholder=" Apelliido" style="margin-left: 2%; border-radius: 10px; height: 60%; padding: 10px;" [(ngModel)]="filterPost">
-        <button type="submit" class="btn btn-success" style="position: absolute;right: 10%;" [routerLink]="['/agregar']">Agregar Socio</button>
-      </div>                
-
-      <br><br><br>
-
-      <div >
-
-          <mat-table [dataSource]= "dataSource |  filter:filterPost" class="mat-elevation-z8" matSort matTableExporter #exporter="matTableExporter" style="font-weight: bold;">          
+          <div >
+  
+            <mat-table [dataSource]= "dataSource |  filter:filterPost" class="mat-elevation-z8" matSort matTableExporter #exporter="matTableExporter" style="font-weight: bold;">          
+                  
+              <!-- Check Column -->
+              <ng-container matColumnDef="check">
+                <th id="checkbox" mat-header-cell *matHeaderCellDef ><input type="checkbox" (change)="checkAll()" [(ngModel)]="checkboxcabecera"></th>
+                <td mat-cell *matCellDef="let socio"><input type="checkbox" [(ngModel)]="socio.checked"></td>
+              </ng-container>
+  
+              <!-- Position Column -->
+              <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef>#</th>
+                <td mat-cell *matCellDef="let socio"> {{socios.indexOf(socio)+1}} </td>
+              </ng-container>
               
-            <!-- Check Column -->
-            <ng-container matColumnDef="check">
-              <th class="text-center" id="checkbox" mat-header-cell *matHeaderCellDef ><input type="checkbox" (change)="checkAll()" [(ngModel)]="checkboxcabecera"></th>
-              <td class="text-center" mat-cell *matCellDef="let socio"><input type="checkbox" [(ngModel)]="socio.checked"></td>
-            </ng-container>
-
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef>#</th>
-              <td mat-cell *matCellDef="let socio"> {{socios.indexOf(socio)+1}} </td>
-            </ng-container>
-          
-            <!-- Apellido -->
-            <ng-container matColumnDef="apellido">
-              <th mat-header-cell *matHeaderCellDef>Apellido</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.apellido}} </td>
-            </ng-container>
-          
-            <!-- Nombres -->
-            <ng-container matColumnDef="nombres">
-              <th mat-header-cell *matHeaderCellDef>Nombres</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.nombre}} </td>
-            </ng-container>
-          
-            <!-- DNI -->
-            <ng-container matColumnDef="dni">
-              <th mat-header-cell *matHeaderCellDef>DNI</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.dni}} </td>
-            </ng-container>
-
-            <!-- Fecha de Nac -->
-            <ng-container matColumnDef="fechaNac">
-              <th mat-header-cell *matHeaderCellDef>Fecha de Nac</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.fechaNac | date: 'dd/MM/yyyy'}} </td>
-            </ng-container>
-
-            <!-- Edad -->
-            <ng-container matColumnDef="edad">
-              <th mat-header-cell *matHeaderCellDef>Edad</th>
-              <td mat-cell *matCellDef="let socio"> {{calcularEdad(socio.fechaNac)}} </td>
-            </ng-container>
-
-            <!-- Domicilio -->
-            <ng-container matColumnDef="domicilio">
-              <th mat-header-cell *matHeaderCellDef>Domicilio</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.domicilio}} </td>
-            </ng-container>
-
-            <!-- Telefono -->
-            <ng-container matColumnDef="telefono">
-              <th mat-header-cell *matHeaderCellDef>Telefono</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.telefono}} </td>
-            </ng-container>
-
-            <!-- Fecha Igreso -->
-            <ng-container matColumnDef="fechaIns">
-              <th mat-header-cell *matHeaderCellDef>Ingreso</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.fechaIns | date: 'dd/MM/yyyy'}} </td>
-            </ng-container>
-
-            <!-- Cargo -->
-            <ng-container matColumnDef="cargo">
-              <th mat-header-cell *matHeaderCellDef >Cargo/Comision</th>
-              <td mat-cell *matCellDef="let socio"> {{socio.cargo}} </td>
-            </ng-container>
-
-            <!-- Cuota -->
-            <ng-container matColumnDef="cuota">
-              <th mat-header-cell *matHeaderCellDef>Cuota</th>
-              <td mat-cell *matCellDef="let socio" [ngClass]="parseFecha(socio.cuota[0].fecha)<parseFecha(this.fechaComparacion) ? 'deuda' : 'estadoOk' "> 
-              {{socio.cuota[0].fecha | date: 'dd/MM/yyyy'}} </td>
-            </ng-container>
-
-            <!-- Estudios -->
-            <ng-container matColumnDef="estudios">
-              <th mat-header-cell *matHeaderCellDef>Estudios</th>
-              <td mat-cell *matCellDef="let socio" style="text-align: center;" [ngClass]="!socio.estudios ? 'deuda' : 'estadoOk'">{{estudios(socio.estudios)}}</td>
-            </ng-container>
-
-            <!-- Editar -->
-            <ng-container matColumnDef="editar">
-              <th mat-header-cell *matHeaderCellDef> Editar </th>
-              <td mat-cell *matCellDef="let socio"> <a [routerLink]="['/actualizar', socios.indexOf(socio)]">Editar</a> </td>
-            </ng-container>           
-            
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
-                      
-
-          </mat-table>
-
-          <button class="btn violet mt-2" mat-raised-button color="primary" (click)="exporter.exportTable('xlsx', {fileName:'Socios'})" style="background-color: aqua;">Descargar Excel</button>
-
-          
+              <!-- Apellido -->
+              <ng-container matColumnDef="apellido">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Apellido</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.apellido}} </td>
+              </ng-container>
+              
+              <!-- Nombres -->
+              <ng-container matColumnDef="nombres">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Nombres</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.nombre}} </td>
+              </ng-container>
+              
+              <!-- DNI -->
+              <ng-container matColumnDef="dni">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>DNI</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.dni}} </td>
+              </ng-container>
+  
+              <!-- Fecha de Nac -->
+              <ng-container matColumnDef="fechaNac">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Fecha de Nac</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.fechaNac | date: 'dd/MM/yyyy'}} </td>
+              </ng-container>
+  
+              <!-- Edad -->
+              <ng-container matColumnDef="edad">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Edad</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{calcularEdad(socio.fechaNac)}} </td>
+              </ng-container>
+  
+              <!-- Domicilio -->
+              <ng-container matColumnDef="domicilio">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Domicilio</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.domicilio}} </td>
+              </ng-container>
+  
+              <!-- Telefono -->
+              <ng-container matColumnDef="telefono">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Telefono</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.telefono}} </td>
+              </ng-container>
+  
+              <!-- Fecha Igreso -->
+              <ng-container matColumnDef="fechaIns">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Ingreso</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{socio.fechaIns | date: 'dd/MM/yyyy'}} </td>
+              </ng-container>
+  
+              <!-- Antiguedad -->
+              <ng-container matColumnDef="antiguedad">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef >Antigüedad</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> {{calcularEdad(socio.fechaIns)}} Años </td>
+              </ng-container>
+  
+              <!-- Cuota -->
+              <ng-container matColumnDef="cuota">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Cuota</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio" 
+                [ngClass]="((parseFecha(socio.cuota[0].fecha)<parseFecha(this.finMesPasado))
+                ||( (parseFecha(hoy)>parseFecha(fechaComparacion))&&(parseFecha(socio.cuota[0].fecha) <= parseFecha(inicioDeMes)))) ? 'deuda':'estadoOk'">
+                {{socio.cuota[0].fecha | date: 'dd/MM/yyyy'}} </td>
+              </ng-container>
+  
+              <!-- Estudios -->
+              <ng-container matColumnDef="estudios">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef>Estudios</th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio" style="text-align: center;" 
+                [ngClass]="(parseFecha(socio.estudios)>parseFecha(this.fechaComparacionEstudios)||(parseFecha(socio.estudios)<parseFecha(fechaComparacionEstudiosAtrasados)))
+                ? 'deuda' : 'estadoOk' ">{{socio.estudios | date: 'dd/MM/yyyy'}}</td>
+              </ng-container>
+  
+              <!-- Editar -->
+              <ng-container matColumnDef="editar">
+                <th class="textoTabla" mat-header-cell *matHeaderCellDef> Editar </th>
+                <td class="textoTabla" mat-cell *matCellDef="let socio"> <a [routerLink]="['/actualizar', socios.indexOf(socio)]">Editar</a> </td>
+              </ng-container>           
+                
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>   
+                          
+  
+            </mat-table>
+  
+            <button class="btn violet" mat-raised-button color="primary" (click)="exporter.exportTable('xlsx', {fileName:'Socios'})" style="background-color: aqua; margin-top: 50px;">Descargar Excel</button>
+  
+              
+          </div>
+      
+        </div>
+      
       </div>
   
+      <br><br>
+  
+      <div style="text-align: center;">
+        <button class="btn btn-primary" (click)="volverInicio()">Ir al Inicio</button>
+      </div>
+      
+    </div> 
+  
+    <div  style="height: 100px;">
+  
     </div>
-  
-  </div>
+    
+  </body> 
 
-  <br><br>
-
-  <div style="text-align: center;">
-    <button class="btn btn-primary" (click)="volverInicio()">Ir al Inicio</button>
-  </div>
-  
-</div> 
+</html>
 
